Added QUERIES for Artist Genre and Impresario Genre: find Artist or Impresario by having empty GenreSet.

--- a/src/main/resources/public/impresario_and_genre.html
+++ b/src/main/resources/public/impresario_and_genre.html
@@ -41,6 +41,7 @@
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByGenre">Список імпресаріо за вказаним жанром</a>
                             <a href="" ng-click="impresarioGenreCtrl.selectMoreThanOneGenre()">Список імпресаріо, що працюють більше, ніж в одному жанрі</a>
+                            <a href="" ng-click="impresarioGenreCtrl.selectNullGenres()">Список імпресаріо, які не працюють в жодному жанрі</a>
                         </div>
                     </div>
                 </div>
