--- a/src/main/resources/public/artist_genre.html
+++ b/src/main/resources/public/artist_genre.html
@@ -40,6 +40,7 @@
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByGenre">Список артистів за вказаним жанром</a>
                             <a href="" ng-click="artistGenreCtrl.selectMoreThanOneGenre()">Список артистів, що працюють більше, ніж в одному жанрі</a>
+                            <a href="" ng-click="artistGenreCtrl.selectNullGenres()">Список артистів, які не працюють в жодному жанрі</a>
                         </div>
                     </div>
                 </div>
