--- a/src/main/resources/public/cinema_movies.html
+++ b/src/main/resources/public/cinema_movies.html
@@ -104,7 +104,7 @@
                     <label>Кінотеатр: </label>
                     <select id="CinemaMovieCinema" name="CinemaMovieCinema" ></select> <br>
                     <label>Дата: </label>
-                    <input type="date" name ="date" id="datePicker"/> <br>
+                    <input type="date" name ="date" id="datePicker" placeholder="Дата"/> <br>
                     <button id="createCinemaMovieButton" ng-click="cinemaMovieCtrl.createCinemaMovie()">Створити</button>
                 </div>
                 <div class="modal-footer">
@@ -141,7 +141,7 @@
                     <label>Кінотеатр: </label>
                     <select id="updateCinemaMovieCinema" name="updateCinemaMovieCinema" ></select> <br>
                     <label>Дата: </label>
-                    <input type="date" name ="updateDate" id="updateDatePicker"/> <br>
+                    <input type="date" name ="updateDate" id="updateDatePicker" placeholder="Дата"/> <br>
                     <button id="updateCinemaMovieButton" ng-click="cinemaMovieCtrl.updateCinemaMovie()">Змінити</button>
                 </div>
                 <div class="modal-footer">
