--- a/src/main/resources/public/impresario.html
+++ b/src/main/resources/public/impresario.html
@@ -47,6 +47,8 @@
                 <tr>
                     <th>&#128273ІД</th>
                     <th>Ім'я</th>
+                    <th>Вік (р)</th>
+                    <th>Досвід (р)</th>
                     <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal">✚</button></th>
                 </tr>
             </thead>
@@ -56,8 +58,10 @@
             <tr ng-repeat = "item in impresarios">
                 <td>{{item.id}}</td>
                 <td>{{item.name}}</td>
+                <td>{{item.age}}</td>
+                <td>{{item.experience}}</td>
                 <td>
-                    <button id="update" ng-click="impresarioCtrl.startUpdateImpresario(item.id, item.name)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
+                    <button id="update" ng-click="impresarioCtrl.startUpdateImpresario(item.id, item.name, item.age, item.experience)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
                     <button id="delete" ng-click="impresarioCtrl.deleteImpresario(item.id)" class="btn-danger">❌</button>
                 </td>
             </tr>
@@ -77,11 +81,15 @@
                     <h4 class="modal-title">Додавання</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Ім'я:</label>
-                    <input type="text" id="ImpresarioName" name="ImpresarioName" />
-                    <button id="createImpresarioButton" ng-click="impresarioCtrl.createImpresario()">Створити</button>
+                    <input class="data" type="text" id="ImpresarioName" placeholder="Введіть ім'я" title="Ім'я"/><br>
+                    <span  class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongName"></span><br><br>
+                    <input class="data" type="number" min="18" id="age" placeholder="Введіть вік" title="Вік"/><br>
+                    <span  class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongAge"></span><br><br>
+                    <input class="data" type="number" min="0" id="experience" placeholder="Введіть досвід" title="Досвід"/><br>
+                    <span  class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongExperience"></span>
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="createImpresarioBtn" ng-click="impresarioCtrl.createImpresario()">Створити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -98,11 +106,15 @@
                     <h4 class="modal-title">Редагування</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Ім'я:</label>
-                    <input type="text" id="updateImpresarioName" name="updateImpresarioName" />
-                    <button id="editImpresarioButton" ng-click="impresarioCtrl.updateImpresario()">Змінити</button>
+                    <input class="data" type="text" id="updateImpresarioName" placeholder="Введіть ім'я" title="Ім'я"/><br>
+                    <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="editWrongName"></span><br><br>
+                    <input class="data" type="number" min="18" id="updAge" placeholder="Введіть вік" title="Вік"/><br>
+                    <span  class="error" style="color: #c00000; text-align: left; font-size: 14px" id="editWrongAge"></span><br><br>
+                    <input class="data" type="number" min="0" id="updExperience" placeholder="Введіть досвід" title="Досвід"/><br>
+                    <span  class="error" style="color: #c00000; text-align: left; font-size: 14px" id="editWrongExperience"></span>
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="editImpresarioButton" ng-click="impresarioCtrl.updateImpresario()">Змінити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -138,6 +150,7 @@
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/angular.min.js"></script>
 <script type="text/javascript" src="js/impresario.js"></script>
+<script type="text/javascript" src="js/onclose.js"></script>
 
 
 
