Initial commit of Heroku project.

--- a/src/main/resources/public/cinema_movies.html
+++ b/src/main/resources/public/cinema_movies.html
@@ -105,9 +105,10 @@
                     <select id="CinemaMovieCinema" name="CinemaMovieCinema" ></select> <br>
                     <label>Дата: </label>
                     <input type="date" name ="date" id="datePicker" placeholder="Дата"/> <br>
-                    <button id="createCinemaMovieButton" ng-click="cinemaMovieCtrl.createCinemaMovie()">Створити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="createCinemaMovieButton" ng-click="cinemaMovieCtrl.createCinemaMovie()">Створити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -142,9 +143,10 @@
                     <select id="updateCinemaMovieCinema" name="updateCinemaMovieCinema" ></select> <br>
                     <label>Дата: </label>
                     <input type="date" name ="updateDate" id="updateDatePicker" placeholder="Дата"/> <br>
-                    <button id="updateCinemaMovieButton" ng-click="cinemaMovieCtrl.updateCinemaMovie()">Змінити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="updateCinemaMovieButton" ng-click="cinemaMovieCtrl.updateCinemaMovie()">Змінити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
