--- a/src/main/resources/public/concert_in_hall.html
+++ b/src/main/resources/public/concert_in_hall.html
@@ -98,9 +98,10 @@
                     <select id="ConcertInHallOrganizer" name="updateConcertInHallOrganizer" ></select> <br>
                     <label>Дата: </label>
                     <input type="date" name ="updateDate" id="datePicker"/> <br>
-                    <button id="createConcertInHallButton" ng-click="concertInHallCtrl.createConcertInHall()">Створити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="createConcertInHallButton" ng-click="concertInHallCtrl.createConcertInHall()">Створити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
