--- a/src/main/resources/public/contest_in_palace.html
+++ b/src/main/resources/public/contest_in_palace.html
@@ -98,9 +98,10 @@
                     <select id="ContestInPalaceOrganizer" name="updateContestInPalaceOrganizer" ></select> <br>
                     <label>Дата: </label>
                     <input type="date" name ="updateDate" id="datePicker"/> <br>
-                    <button id="createContestInPalaceButton" ng-click="contestInPalaceCtrl.createContestInPalace()">Створити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="createContestInPalaceButton" ng-click="contestInPalaceCtrl.createContestInPalace()">Створити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -127,9 +128,10 @@
                     <select id="updateContestInPalaceOrganizer" name="updateContestInPalaceOrganizer" ></select> <br>
                     <label>Дата: </label>
                     <input type="date" name ="updateDate" id="updateDatePicker"/> <br>
-                    <button id="updateContestInPalaceButton" ng-click="contestInPalaceCtrl.updateContestInPalace()">Змінити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="updateContestInPalaceButton" ng-click="contestInPalaceCtrl.updateContestInPalace()">Змінити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
