--- a/src/main/resources/public/culture_palace.html
+++ b/src/main/resources/public/culture_palace.html
@@ -88,9 +88,10 @@
                     <input type="text" id="CulturePalaceAddress" name="CulturePalaceAddress" /> <br>
                     <label>Місткість:</label>
                     <input type="number" min="10" id="CulturePalaceCapacity" name="CulturePalaceCapacity" /> <br>
-                    <button id="createCulturePalaceButton" ng-click="culturePalaceCtrl.createCulturePalace()">Створити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="createCulturePalaceButton" ng-click="culturePalaceCtrl.createCulturePalace()">Створити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -113,9 +114,9 @@
                     <input type="text" id="updateCulturePalaceAddress" name="updateCulturePalaceAddress" /> <br>
                     <label>Місткість:</label>
                     <input type="number" min="10" id="updateCulturePalaceCapacity" name="updateCulturePalaceCapacity" /> <br>
-                    <button id="editCulturePalaceButton" ng-click="culturePalaceCtrl.updateCulturePalace()">Змінити</button>
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="editCulturePalaceButton" ng-click="culturePalaceCtrl.updateCulturePalace()">Змінити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
