--- a/src/main/resources/public/theatre.html
+++ b/src/main/resources/public/theatre.html
@@ -87,9 +87,10 @@
                     <input type="text" id="TheatreAddress" name="TheatreAddress" /> <br>
                     <label>Місткість:</label>
                     <input type="text" id="TheatreCapacity" name="TheatreCapacity" /> <br>
-                    <button id="createTheatreButton" ng-click="theatreCtrl.createTheatre()">Створити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="createTheatreButton" ng-click="theatreCtrl.createTheatre()">Створити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -112,9 +113,10 @@
                     <input type="text" id="updateTheatreAddress" name="updateTheatreAddress" /> <br>
                     <label>Місткість:</label>
                     <input type="text" id="updateTheatreCapacity" name="updateTheatreCapacity" /> <br>
-                    <button id="editTheatreButton" ng-click="theatreCtrl.updateTheatre()">Змінити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="editTheatreButton" ng-click="theatreCtrl.updateTheatre()">Змінити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
