--- a/src/main/resources/public/theatre_performance.html
+++ b/src/main/resources/public/theatre_performance.html
@@ -126,9 +126,10 @@
                     <select id="updateTheatrePerformanceOrganizer" name="updateTheatrePerformanceOrganizer" ></select> <br>
                     <label>Дата: </label>
                     <input type="date" name ="updateDate" id="updateDatePicker"/> <br>
-                    <button id="updateTheatrePerformanceButton" ng-click="theatrePerformanceCtrl.updateTheatrePerformance()">Змінити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="updateTheatrePerformanceButton" ng-click="theatrePerformanceCtrl.updateTheatrePerformance()">Змінити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
