--- a/src/main/resources/public/concert_hall.html
+++ b/src/main/resources/public/concert_hall.html
@@ -88,9 +88,10 @@
                     <input type="text" id="ConcertHallAddress" name="ConcertHallAddress" /> <br>
                     <label>Місткість:</label>
                     <input type="number" min="10" id="ConcertHallCapacity" name="ConcertHallCapacity" /> <br>
-                    <button id="createConcertHallButton" ng-click="concertHallCtrl.createConcertHall()">Створити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="createConcertHallButton" ng-click="concertHallCtrl.createConcertHall()">Створити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -113,9 +114,10 @@
                     <input type="text" id="updateConcertHallAddress" name="updateConcertHallAddress" /> <br>
                     <label>Місткість:</label>
                     <input type="number" min="10" id="updateConcertHallCapacity" name="updateConcertHallCapacity" /> <br>
-                    <button id="editConcertHallButton" ng-click="concertHallCtrl.updateConcertHall()">Змінити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="editConcertHallButton" ng-click="concertHallCtrl.updateConcertHall()">Змінити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
