Some changes in CSS and Cinema Movies HTML.

--- a/src/main/resources/public/cinema_movies.html
+++ b/src/main/resources/public/cinema_movies.html
@@ -87,10 +87,8 @@
                     <h4 class="modal-title">Додавання</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Назва: </label>
-                    <input type="text" id="CinemaMovieName" name="CinemaMovieName" /> <br>
-                    <label>Жанр: </label>
-                    <select id="CinemaMovieGenre" name="CinemaMovieGenre" >
+                    <input type="text" id="CinemaMovieName" name="CinemaMovieName" placeholder="Назва" title="Назва" /> <br> <br>
+                    <select id="CinemaMovieGenre" name="CinemaMovieGenre" title="Жанр" >
                         <option>Комедія</option>
                         <option>Драма</option>
                         <option>Мелодрама</option>
@@ -100,11 +98,9 @@
                         <option>Фентезі</option>
                         <option>Тріллер</option>
                         <option>Детектив</option>
-                    </select> <br>
-                    <label>Кінотеатр: </label>
-                    <select id="CinemaMovieCinema" name="CinemaMovieCinema" ></select> <br>
-                    <label>Дата: </label>
-                    <input type="date" name ="date" id="datePicker" placeholder="Дата"/> <br>
+                    </select> <br> <br>
+                    <select id="CinemaMovieCinema" name="CinemaMovieCinema" title="Кінотеатр"></select> <br> <br>
+                    <input type="date" name ="date" id="datePicker" title="Дата показу"/> <br>
 
                 </div>
                 <div class="modal-footer">
